2003-07-31  Jeff Martin <jeff@custommonkey.org>

	* cong-dispspec.c

	Bug fixes in dispspec generation and loading

	* plugin-save-dispspec.c, cong-fake-plugin-hooks.h, main.c, Makefile.am

	Added plugin to extract dispspec as a dom tree and either save it
	straight to a file or open it as a CongDocument

2003-07-28  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-flow-holder-inlines.c

	Removed spurious include

	* cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-single.c, cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, cong-editor-widget3.c

	Use child_policy objects; editor widget no longer needs (or has) a 1-1 mapping between nodes and areas
	
	* cong-editor-child-policy-flow-holder.c, cong-editor-child-policy-flow-holder.h, cong-editor-child-policy.c, cong-editor-child-policy.h, Makefile.am

	New files: policy objects for managing the areas created for the children of an editor node

2003-07-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-bin.c, cong-editor-area-border.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-flow-holder-blocks.c, /cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-single.c, cong-editor-area-pixbuf.c, cong-editor-area-spacer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-widget3.c, plugin-lists-area-listitem.c

	Split up width/height requisition calculations

	* cong-editor-node-text.h, cong-editor-widget.h

	Added some missing prototypes
	
	* cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget3.c	

	Reorganised editor_area creation so that the flow_holders are responsible for it, with a class hierarchy.
	